# rfx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/rfx-bootstrap-install/: SKILL.md
.claude/skills/rfx-bootstrap-install/scripts/: bootstrap.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  publish-python.yml
.moon/: workspace.yml
cli/: README.md  rfx.sh
crates/rfx-core/: Cargo.toml
crates/rfx-core/benches/: control_loop.rs
crates/rfx-core/src/: lib.rs
crates/rfx-core/src/comm/: channel.rs  stream.rs  topic.rs
crates/rfx-core/src/control/: control_loop.rs  pid.rs  state_machine.rs
crates/rfx-core/src/hardware/: mod.rs  traits.rs
crates/rfx-core/src/hardware/go2/: mod.rs  types.rs
crates/rfx-core/src/hardware/go2/dds/: crc.rs  cyclone.rs  dust.rs  messages.rs  mod.rs
crates/rfx-core/src/hardware/so101/: config.rs  mod.rs  serial.rs  types.rs
crates/rfx-core/src/math/: filter.rs  mod.rs  quaternion.rs  transform.rs
crates/rfx-core/src/neural/: mod.rs  spaces.rs
crates/rfx-core/src/sim/: backend.rs  config.rs  mock.rs  mod.rs
crates/rfx-python/: Cargo.toml
crates/rfx-python/src/: bindings.rs  lib.rs
docs/: README.md  go2.md  innate.md  operator-checklist.md  python-sdk.md  sim.md  so101.md  structure.md  teleop.md  workflow-cli.md  workflow.md
docs/perf/: README.md
docs/perf/baselines/: README.md  rfxjit_microkernels_cpu.json
examples/: agent_control.py  so101_quickstart.py  train_vla.py  train_walking.py  walk.py
python/rfx/: __init__.py  _rfx.pyi  agent.py  decorators.py  envs.py
python/rfx/real/: base.py  go2.py
python/rfx/sim/: mjx.py
python/rfx/utils/: padding.py  transforms.py
rfx/: README.md
rfx/configs/: go2.yaml  so101.yaml
rfx/crates/rfx-core/: Cargo.toml
rfx/crates/rfx-core/src/: lib.rs
rfx/crates/rfx-core/src/comm/: channel.rs  mod.rs  topic.rs  transport.rs  zenoh.rs
rfx/crates/rfx-core/src/control/: mod.rs  pid.rs
rfx/crates/rfx-core/src/hardware/: mod.rs  traits.rs
rfx/crates/rfx-core/src/hardware/go2/: mod.rs  types.rs
rfx/crates/rfx-core/src/hardware/go2/dds/: backend.rs  dust.rs  messages.rs  mod.rs  zenoh_dds.rs
rfx/crates/rfx-core/src/hardware/so101/: serial.rs  types.rs
rfx/crates/rfx-core/src/math/: filter.rs  mod.rs  quaternion.rs
rfx/crates/rfx-core/src/neural/: mod.rs  spaces.rs
rfx/crates/rfx-core/src/sim/: backend.rs  mock.rs  mod.rs
rfx/crates/rfx-python/: Cargo.toml
rfx/crates/rfx-python/src/: bindings.rs  lib.rs
rfx/examples/: README.md  agent_control.py  balance.py  deploy_policy.py  deploy_real.py  neural_policy.py  quick_experiment.py  teleop_record.py  train_vla.py  walk.py
rfx/python/rfx/: __init__.py  _rfx.pyi  agent.py  config.py  decorators.py  envs.py  jit.py  nn.py  observation.py  platform_client.py  providers.py  rl.py  robot.py  sdk.py  session.py  skills.py  urdf.py
rfx/python/rfx/collection/: __init__.py
rfx/python/rfx/real/: README.md  __init__.py  base.py  camera.py  go2.py  so101.py
rfx/python/rfx/robot/: __init__.py
rfx/python/rfx/runtime/: __init__.py  cli.py  node.py  packages.py  runner.py
rfx/python/rfx/sim/: base.py  genesis.py  mjx.py  mock.py
rfx/python/rfx/teleop/: __init__.py  benchmark.py  config.py  lerobot_writer.py  recorder.py  session.py  transport.py
rfx/python/rfx/utils/: __init__.py  padding.py  transforms.py
rfx/tests/: conftest.py  test_agent.py  test_decorators.py  test_deploy.py  test_health.py  test_jit_runtime.py  test_robot_v2.py  test_skills.py  test_teleop_benchmark.py  test_teleop_config.py  test_teleop_lerobot_writer.py  test_teleop_recorder.py  test_teleop_session.py  test_teleop_transport.py  test_teleop_transport_binding.py
rfx/tests/integration/: __init__.py  test_rust_bindings.py
rfxJIT/: README.md  ROADMAP.md  __init__.py
rfxJIT/kernels/: README.md  __init__.py  ad.py  codegen.py  ir.py  optimize.py  trace.py
rfxJIT/notes/: README.md
rfxJIT/runtime/: README.md  __init__.py  benchmark.py  executor.py  interpreter.py  opcode.py  queue.py  tinyjit.py
rfxJIT/tests/: test_backends.py  test_benchmark.py  test_grad_transforms.py  test_ir.py  test_opcode_tape.py  test_optimize.py  test_tinyjit.py
scripts/: bootstrap-teleop.sh  doctor-teleop.sh  perf-check.sh  perf-gate.sh  python-checks.sh  python-lint-ratchet.txt  python-typecheck-baseline.txt  python-typecheck-ratchet.txt  setup-from-source.sh  setup-git-hooks.sh
src/crates/rfx-core/: moon.yml
src/crates/rfx-core/benches/: control_loop.rs
src/crates/rfx-core/src/comm/: stream.rs
src/crates/rfx-core/src/control/: control_loop.rs  state_machine.rs
src/crates/rfx-core/src/hardware/go2/: mod.rs
src/crates/rfx-core/src/hardware/go2/dds/: crc.rs  cyclone.rs
src/crates/rfx-core/src/hardware/so101/: mod.rs
src/crates/rfx-core/src/math/: transform.rs
src/crates/rfx-core/src/sim/: config.rs
src/crates/rfx-python/: moon.yml
src/crates/rfx-python/src/: lib.rs
src/examples/: balance.py  deploy_real.py  neural_policy.py  quick_experiment.py  teleop_record.py
src/python/: moon.yml
src/python/rfx/: __init__.py  agent.py  config.py  envs.py  nn.py  observation.py  rl.py  skills.py
src/python/rfx/real/: camera.py  go2.py  so101.py
src/python/rfx/sim/: __init__.py  base.py  genesis.py  mjx.py
src/python/rfx/utils/: __init__.py  padding.py
src/tests/: test_robot_v2.py
tests/: __init__.py  conftest.py  test_agent.py  test_decorators.py  test_robot_v2.py  test_skills.py
tests/integration/: test_rust_bindings.py
