[package]
name = "rfx-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for the rfx robotics framework"

[lib]
name = "_rfx"
crate-type = ["cdylib"]

[dependencies]
rfx-core = { path = "../rfx-core" }
pyo3.workspace = true
tokio.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
extension-module = ["pyo3/extension-module"]
